# manga-unifier

./: .env  .env.sample  Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: integration-tests.yml
scripts/: start.sh
tests/factories/: chapter.py  favorite.py  image.py  manga.py  novel.py  platform.py  user.py
tests/integration/: test_create_services.py  test_token.py  test_users.py  test_views.py
unifier/: asgi.py  settings.py  urls.py  wsgi.py
unifier/apps/core/: __init__.py  admin.py  apps.py  signals.py
unifier/apps/core/management/commands/: isekaiscan.py  mangahost.py  mangahost_replace.py  neoxscan.py  supermangas.py
unifier/apps/core/migrations/: 0001_initial.py  0002_auto_20210216_1223.py  0003_auto_20210216_1230.py  0004_auto_20210216_1316.py  0005_auto_20210216_1318.py  0006_auto_20210216_1947.py  0007_auto_20210216_2318.py  0008_auto_20210219_1445.py  0009_auto_20210223_0124.py  0010_auto_20210225_0227.py  0011_manga_tags.py  0012_favorite.py  0013_auto_20210504_1951.py  0013_auto_20210730_2103.py
unifier/apps/core/models/: __init__.py  base.py  chapter.py  image.py  manga.py  novel.py  plataform.py  user.py
unifier/apps/core/services/: __init__.py  base.py  create.py
unifier/apps/drf/v1/: pagination.py  serializers.py  views.py
unifier/apps/drf/v1/serializers/: __init__.py  favorite.py  manga.py  novel.py  platform.py  user.py
unifier/apps/drf/v1/views/: __init__.py  favorite.py  manga.py  novel.py  platform.py  user.py
unifier/support/: django_helpers.py  http.py  http_adapters.py  http_hooks.py  manager.py  utils.py
